Wed Jun 25 11:00:00 2003  Justin Michel  <michel_j@ociweb.com>

        * nightly.mwc:
        * ACEXML/ACEXML.mwc:
        * ACEXML/common/common.mpc:
        * ACEXML/parser/parser/parser.mpc:
        * ASNMP/asnmp.mwc:
        * Kokyu/Kokyu.mpc:
        * ace/ace.mpc:
        * ace/ace.mwc:
        * ace/QoS/qos.mpc:
        * ace/RMCast/rmcast.mpc:
        * ace/SSL/ssl.mpc:
        * apps/apps.mwc:
        * apps/gperf/src/gperf.mpc:
        * apps/mkcsregdb/mkcsregdb.mpc:
        * bin/create_ace_build.pl:
        * bin/MakeProjectCreator/README
        * bin/MakeProjectCreator/config/acedefaults.mpb:
        * bin/MakeProjectCreator/config/aceexe.mpb:
        * bin/MakeProjectCreator/config/acelib.mpb:
        * bin/MakeProjectCreator/config/acexml.mpb:
        * bin/MakeProjectCreator/config/avstreams.mpb:
        * bin/MakeProjectCreator/config/avstreamsexe.mpb:
        * bin/MakeProjectCreator/config/bidir_giop.mpb:
        * bin/MakeProjectCreator/config/ciao_client.mpb:
        * bin/MakeProjectCreator/config/ciao_component.mpb:
        * bin/MakeProjectCreator/config/ciao_servant.mpb:
        * bin/MakeProjectCreator/config/ciao_server.mpb:
        * bin/MakeProjectCreator/config/client.mpb:
        * bin/MakeProjectCreator/config/concurrency.mpb:
        * bin/MakeProjectCreator/config/dslogadmin.mpb:
        * bin/MakeProjectCreator/config/dynamicany.mpb:
        * bin/MakeProjectCreator/config/dynamicinterface.mpb:
        * bin/MakeProjectCreator/config/etcl.mpb:
        * bin/MakeProjectCreator/config/event.mpb:
        * bin/MakeProjectCreator/config/ftorb.mpb:
        * bin/MakeProjectCreator/config/global.features
        * bin/MakeProjectCreator/config/global.mpb:
        * bin/MakeProjectCreator/config/ifr_client.mpb:
        * bin/MakeProjectCreator/config/ifrservice.mpb:
        * bin/MakeProjectCreator/config/iorinterceptor.mpb:
        * bin/MakeProjectCreator/config/iormanip.mpb:
        * bin/MakeProjectCreator/config/iortable.mpb: