@@ -19,7 +19,7 @@ ACE_ROOT=$ROOT
 export ACE_ROOT
 LD_LIBRARY_PATH=$ACE_ROOT/ace
 export LD_LIBRARY_PATH
-PATH=/usr/bin:$PATH
+PATH=/usr/bin:/bin:$PATH
 export PATH
 cd TAO/performance-tests/Memory/Single_Threaded
 # start the server
@@ -33,7 +33,7 @@ if test -f $file
     then
     # Just get the size as soon the server is started, ie. the vanilla
     # server.  
-    s_up=`top -p $s_id -n 1 -b | grep $US| awk '{print $5}'`;
+    s_up=`cat /proc/$s_id/status | grep VmRSS | awk '{print $2}'`;
 
     # Write it a file
     echo $DATE $s_up >> $DEST/source/st_start_size.txt
@@ -43,12 +43,12 @@ if test -f $file
     # Wait till all the invocations are done
     sleep 10;
     # Get the size once the client has made sufficient invocations. 
-    s_invocations=`top -p $s_id -n 1 -b | grep $US| awk '{print $5}'`;
+    s_invocations=`cat /proc/$s_id/status | grep VmRSS| awk '{print $2}'`;
     
     echo $DATE $s_invocations >> $DEST/source/st_after_invoke_size.txt
     
     # Get teh size of the client after all the invocations
-    c_invocations=`top -p $c_id -n 1 -b | grep $US| awk '{print $5}'`;
+    c_invocations=`cat /proc/$c_id/status | grep VmRSS | awk '{print $2}'`;
     echo $DATE $c_invocations >> $DEST/source/st_client_size.txt
 
     # Kill the server and client. We will look at better ways of doing
@@ -59,7 +59,7 @@ if test -f $file
     sleep 5;
 
     # Get the size once the client is killed or crashed
-    s_client_death=`top -p $s_id -n 1 -b | grep $US| awk '{print $5}'`;
+    s_client_death=`cat /proc/$s_id/status | grep VmRSS | awk '{print $2}'`;
     echo $DATE $s_client_death  >> $DEST/source/st_after_peer_death_size.txt
     kill -9 $s_id;
     rm -f $file
